deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: saumikdemo-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: saumikdemo
  template:
    metadata:
      labels:
        app: saumikdemo
    spec:
      containers:
        - name: saumikdemo-container
          image: 891376921871.dkr.ecr.us-east-1.amazonaws.com/saumikdemo:latest
          #image: saumik8763/saumikdemo:latest
          ports:
            - containerPort: 3000
