service.yaml
apiVersion: v1
kind: Service
metadata:
  name: saumikdemo-service
spec:
  selector:
    app: saumikdemo
  ports:
    - protocol: TCP
      port: 80        # Port exposed by the service
      targetPort: 3000  # Port exposed by the pod/container
  type: LoadBalancer
