istio-gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: saumikdemo-gateway
  namespace: default
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 443
        name: https
        protocol: HTTPS
      tls:
        mode: SIMPLE
        credentialName: saumikdemo-tls  # Secret name in istio-system namespace
      hosts:
        - "af7e94ebcf3a04a96ae1e57315e8b661-189775480.us-east-1.elb.amazonaws.com"
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: saumikdemo-vs
  namespace: default
spec:
  hosts:
    - "af7e94ebcf3a04a96ae1e57315e8b661-189775480.us-east-1.elb.amazonaws.com"
  gateways:
    - saumikdemo-gateway
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: saumikdemo-service.default.svc.cluster.local
            port:
              number: 80
